--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,4 +1,16 @@
 #{extends 'main.html' /}
 #{set title:'Home' /}
 
-#{welcome /}
+*{#{welcome /}}*
+
+#{if flash.error}
+<p style="color:#c00">
+${flash.error}
+</p>
+#{/if}
+
+<form action="@{hello()}" method="GET">
+    <input type="text" name="name" />
+    <input type="text" name="pwd" />
+    <input type="submit" value="submit!" />
+</form>
